# Full-Stack-PTO-Management-Platform

./: .gitignore  README.md
.github/workflows/: deploy.yml
backend/: main.py  pto_tracker.db  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py  services.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: session.py
backend/tests/: conftest.py  test_api.py
backend/tests/features/: approval_workflow.feature  audit_trail.feature  authentication.feature  balances.feature  calendar.feature  dashboard.feature  notifications.feature  policies.feature  pto_request_creation.feature  reports_and_exports.feature  team_roster.feature
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.css  App.jsx  api.js  index.css
